--- a/my-frontend/package.json
+++ b/my-frontend/package.json
@@ -8,7 +8,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack -w",
     "webpack:production": "NODE_ENV=production webpack",
-    "server": "webpack-dev-server"
+      "server": "webpack-dev-server",
+      "server2": "node server.js"
+
   },
   "keywords": [
     "BuckleScript"
